# Learnbotics

./: README.md
Gazebo modelling/: model.config  model.sdf
learnbot_description/: CMakeLists.txt  package.xml
learnbot_description/launch/: Learnbot.rviz  Learnbot_rviz.launch
learnbot_description/meshes/: Body.dae  LeftWheel.dae  LeftWheel.stl  LiDARbottom.stl  LiDARtop.stl  RightWheel.dae  RightWheel.stl  Sphere.dae  Sphere.stl
learnbot_description/urdf/: camera.xacro  learnbot.rviz  learnbot.xacro  rodas.xacro
learnbot_gazebo/: CMakeLists.txt  package.xml
learnbot_gazebo/launch/: gazebo.launch
