<package>
  <name>learnbot_gazebo</name>
  <version>0.1.0</version>
  <description>learnbot_gazebo</description>
  <maintainer email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</maintainer>

  <license>BSD</license>

  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>learnbot_control</run_depend>
  <run_depend>learnbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
